fix: annotation processor for error-prone without no test will run fix: ignore tests in Demo using ArchIgnore (for demo purposes) fix: add plugin repositories so Zally and ArchUnit plugin can find the libraries in jitpack.io